# Folks working on OS Bazelification
gbiv@chromium.org #{LAST_RESORT_SUGGESTION}
hashimoto@chromium.org #{LAST_RESORT_SUGGESTION}
msta@google.com #{LAST_RESORT_SUGGESTION}
nya@chromium.org #{LAST_RESORT_SUGGESTION}
rrangel@chromium.org #{LAST_RESORT_SUGGESTION}
tbain@google.com #{LAST_RESORT_SUGGESTION}
ttylenda@chromium.org #{LAST_RESORT_SUGGESTION}
